--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -15,7 +15,7 @@ color: var(--body-background-color);
 .problems__list {
     counter-reset: problems__item;
 
-    padding: 20px 12px 24px 32px;
+    padding: 49px 23px 24px 32px;
     background-color: var(--body-background-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -32,12 +32,13 @@ color: var(--body-background-color);
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(-70%);
+    transform: translateY(calc(-50% - 5px));
+    
   }    
 } 
 
 .problems__item:not(:last-child) {
-    margin-bottom: 16px;
+    margin-bottom: 45px;
 }
 
 
