--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -1,5 +1,5 @@
 .problems {
-    padding: 24px 0;
+    padding: 24px 0 40px;
     background-image: linear-gradient(to bottom,
     var(--dark-text-color) 72%,
     var(--body-background-color) 28%
