--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,10 +12,15 @@
             </a>
           
         </nav>
-         <button type="button" class="header-menu">
-            <svg class="modal-menu__open" width="21" height="12">
-                <use href="./images/logo-sprites.svg#icon-menu"></use>
+         <button type="button" class="modal-menu__open">
+            <svg  width="35" height="35">
+                <use class="burger" href="./images/logo-sprites.svg#icon-menu"></use>
             </svg>
         </button>
+    </div>
+    <div class="modal-menu is-hidden">
+        <div class="container">
+            
+        </div>
     </div>
 </header>
