--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,7 +7,7 @@
        
         padding: 20px;
     }
-    .header-menu {
+    .modal-menu__open {
         margin-left: auto;
         background-color: transparent;
         border: none;
@@ -16,4 +16,4 @@
  }
 
 
-
+ 
