--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,8 +19,14 @@
         </button>
     </div>
     <div class="modal-menu is-hidden">
-        <div class="container">
-            
+        <div class="container modal-container">
+            <div class="mobile-menu__top">
+                <a class="modal-logo" href="./index.html">
+                    <svg class="header-logo__icon" width="80" height="29">
+                        <use href="./images/logo-sprites.svg#icon-logo-modal"></use>
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 </header>
