--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -57,8 +57,6 @@ body {
 }
 
 .container {
-  padding-left: 15px;
-  padding-right: 15px;
   width: 100%;
 }
 
@@ -90,5 +88,22 @@ body {
   margin-top: 0;
   margin-bottom: 80px;
   font-size: 46px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .header-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px;
+  }
+  .modal-menu__open {
+    margin-left: auto;
+    background-color: transparent;
+    border: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
